--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,37 @@
     <title>BoardGame</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="testBody">
     <div class="table">
         <div class="left-side">
-
+            <div class="player-table">
+                    <div class="player-tile" id="l0"></div>
+                    <div class="player-tile" id="l1"></div>
+                    <div class="player-tile" id="l2"></div>
+                    <div class="player-tile" id="l3"></div>
+                    <div class="player-tile" id="l4"></div>
+                    <div class="player-tile" id="l5"></div>
+                    <div class="player-tile" id="l6"></div>
+                    <div class="player-tile" id="l7"></div>
+                    <div class="player-tile" id="l8"></div>
+                    <div class="player-tile" id="l9"></div>
+                    <div class="player-tile" id="l10"></div>
+                    <div class="player-tile" id="l11"></div>
+                    <div class="player-tile" id="l12"></div>
+                    <div class="player-tile" id="l13"></div>
+                    <div class="player-tile" id="l14"></div>
+                    <div class="player-tile" id="l15"></div>
+                    <div class="player-tile" id="l16"></div>
+                    <div class="player-tile" id="l17"></div>
+                    <div class="player-tile" id="l18"></div>
+                    <div class="player-tile" id="l19"></div>
+                    <div class="player-tile" id="l20"></div>
+                    <div class="player-tile" id="l21"></div>
+                    <div class="player-tile" id="l22"></div>
+                    <div class="player-tile" id="l23"></div>
+                    <div class="player-tile" id="l24"></div>
+            </div>
         </div>
         <div class="right-side">
             <div class="rng">
@@ -24,8 +52,8 @@
                 <div class="rng-tile" id="r7"></div>
                 <div class="rng-tile" id="r8"></div>
             </div>
-            <div class="restart" onclick="test()">
-                
+            <div class="restart" onclick="restart()">
+
             </div>
             <div class="moves">
 
@@ -37,4 +65,5 @@
     </div>
     <script src="game.js"></script>
 </body>
+
 </html>
