all functionalities implemented, need to sweeten the look

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="testBody">
     <div class="table">
         <div class="left-side">
-            <div class="player-table">
+            <div id="player_table" class="player-table">
                     <div class="player-tile" id="l0"></div>
                     <div class="player-tile" id="l1"></div>
                     <div class="player-tile" id="l2"></div>
