refactored the code, made it prettier

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                 <div class="rng-tile" id="r7"></div>
                 <div class="rng-tile" id="r8"></div>
             </div>
-            <div class="restart" onclick="restart()">
-
+            <div class="restart-btn" onclick="restart()">
+                <p id="restart-text" class="restart-text">
+                    START
+                </p>
             </div>
             <div class="moves">
 
