added timer and move counter

--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
                     START
                 </p>
             </div>
-            <div class="moves">
-
+            <div class="stats">
+                <div class="statsChild">
+                    <p id="moves">Moves: 0</p>
+                </div>
+                <div class="statsChild">
+                    <p id="timer">Time: 00:00</p>
+                </div>
             </div>
             <div class="commercial">
 
