--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="restart-btn" onclick="restart()">
                 <p id="restart-text" class="restart-text">
-                    START
+                    NEW GAME
                 </p>
             </div>
             <div class="stats">
