--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             </div>
         </div>
     </div>
+    <script src="Coloring.js"></script>
+    <script src="Elements.js"></script>
     <script src="game.js"></script>
 </body>
 
